--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-mx">
 
 <head>
     <meta charset="UTF-8">
@@ -10,11 +10,29 @@
 
 <body>
     <header>
-        <nav>
-            <a></a>
-        </nav>
+        <img class="logo" src="./images/Logo.png" alt="Logo de alura">
     </header>
-
+    <main>
+        <section>
+            <textarea class="text-area" name="textarea" rows="4" cols="30"
+                placeholder="Ingrese el texto aqui"></textarea>
+            <div>
+                <h6 class="info">Solo letras minúsculas y sin acentos</h6>
+            </div>
+            <div class="botones">
+                <button class="btn-encriptar" onclick="btnEncriptar()">Encriptar</button>
+                <button class="btn-desencriptar" onclick="btnDesencriptar()">Desencriptar</button>
+            </div>
+        </section>
+        <section>
+            <textarea class="text-mensaje" id="text-copiado" name="textarea" rows="10" cols="20"
+                placeholder="Ningún mensaje fue encontrado"></textarea>
+            <div>
+                <button class="btn-copiar" onclick="btnCopiar()">Copiar</button>
+            </div>
+        </section>
+    </main>
+    <script src="script.js"></script>
 </body>
 
 </html>
